# Compiler

./: CMakeLists.txt  LexicalDetector.h  main.cpp
CompilerProject/: CompilerProject.vcxproj  CompilerProject.vcxproj.filters  MyForm.cpp  MyForm.h
CompilerProject/validators/: LexicalDetector.h  Types.h  Validator.cpp  Validator.h
CompilerProject/validators/Identifier/: IdentifierValidator.cpp  IdentifierValidator.h  KeyWordValidator.cpp  KeyWordValidator.h
CompilerProject/validators/Number/: NumberValidator.cpp  NumberValidator.h
CompilerProject/validators/Symbol/: ArithmeticOperatorValidator.cpp  ArithmeticOperatorValidator.h  LogicalOperatorValidator.cpp  LogicalOperatorValidator.h  SymbolValidator.cpp  SymbolValidator.h
CompilerProject/x64/Debug/: CompilerProject.exe.recipe  CompilerProject.vcxproj.FileListAbsolute.txt  CompilerProject.vcxproj.GenerateResource.cache
CompilerProject/x64/Debug/CompilerProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CompilerProject.lastbuildstate  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
validators/: Type.h  Validator.cpp  Validator.h
validators/Identifier/: IdentifierValidator.cpp  IdentifierValidator.h  KeyWordValidator.cpp  KeyWordValidator.h
validators/Number/: NumberValidator.cpp  NumberValidator.h
validators/Symbol/: ArithmeticOperatorValidator.cpp  ArithmeticOperatorValidator.h  LogicalOperatorValidator.cpp  LogicalOperatorValidator.h  SymbolValidator.cpp  SymbolValidator.h
